--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=xotahal_react-native-reanimated
 sonar.organization=xotahal
 
+sonar.exclusions=**/*.java
+sonar.coverage.exclusions=**/*.java
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=react-native-reanimated
 #sonar.projectVersion=1.0
