--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,10 @@ sonar.organization=xotahal
 sonar.exclusions=**/*.java
 sonar.coverage.exclusions=**/*.java
 
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=react-native-reanimated
 #sonar.projectVersion=1.0
